--- a/word2vec.ipynb
+++ b/word2vec.ipynb
@@ -245,42 +245,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 1, loss: 489.305420\n",
+      "step: 1, loss: 498.740784\n",
       "Evaluation...\n",
-      "\"five\" nearest neighbors: populist, anglian, instituting, footprint, sailors, disease, orbison, fucked,\n",
-      "\"of\" nearest neighbors: eamonn, nominee, rnsson, garage, convents, subpoenaed, basing, suing,\n",
-      "\"going\" nearest neighbors: providers, animated, supine, yap, unintended, andre, felines, la,\n",
-      "\"hardware\" nearest neighbors: ingesting, gmt, mjh, stove, motor, intercommunal, shooters, frees,\n",
-      "\"american\" nearest neighbors: enchanted, paddling, indentation, nacional, boycotted, ideology, factorization, dictatorships,\n",
-      "\"britain\" nearest neighbors: magnetron, obesity, tm, ioan, loosened, ist, neurologists, terraced,\n",
-      "step: 10000, loss: 101.689316\n",
-      "step: 20000, loss: 69.167099\n",
-      "step: 30000, loss: 49.097328\n",
-      "step: 40000, loss: 21.591267\n",
-      "step: 50000, loss: 51.032402\n",
-      "step: 60000, loss: 46.610859\n",
-      "step: 70000, loss: 19.282686\n",
-      "step: 80000, loss: 23.373928\n",
-      "step: 90000, loss: 49.794060\n",
-      "step: 100000, loss: 29.071980\n",
-      "step: 110000, loss: 22.367550\n",
-      "step: 120000, loss: 20.271091\n",
-      "step: 130000, loss: 36.527195\n",
-      "step: 140000, loss: 25.971762\n",
-      "step: 150000, loss: 12.198672\n",
-      "step: 160000, loss: 20.866718\n",
-      "step: 170000, loss: 10.611427\n",
-      "step: 180000, loss: 18.314297\n",
-      "step: 190000, loss: 10.668102\n",
-      "step: 200000, loss: 17.341951\n",
+      "\"five\" nearest neighbors: dubh, mammalian, pancras, surgery, nadia, adultery, erstwhile, reaper,\n",
+      "\"of\" nearest neighbors: tutsi, ifrcs, ji, loris, hurdle, postpartum, uncommonly, quarterfinals,\n",
+      "\"going\" nearest neighbors: fierce, hydroponics, jumped, interscope, isdb, android, urine, garment,\n",
+      "\"hardware\" nearest neighbors: declined, ericaceae, forefront, judaic, karami, kcal, ink, spreads,\n",
+      "\"american\" nearest neighbors: diversion, golan, armies, annual, misadventures, launch, ipo, adultery,\n",
+      "\"britain\" nearest neighbors: screenshots, thyroid, command, mcc, compensating, characterize, european, brasilia,\n",
+      "step: 10000, loss: 108.097404\n",
+      "step: 20000, loss: 79.241119\n",
+      "step: 30000, loss: 50.177490\n",
+      "step: 40000, loss: 19.261341\n",
+      "step: 50000, loss: 34.796986\n",
+      "step: 60000, loss: 44.222954\n",
+      "step: 70000, loss: 17.456255\n",
+      "step: 80000, loss: 28.408594\n",
+      "step: 90000, loss: 67.145477\n",
+      "step: 100000, loss: 45.396851\n",
+      "step: 110000, loss: 25.869507\n",
+      "step: 120000, loss: 16.781841\n",
+      "step: 130000, loss: 30.247234\n",
+      "step: 140000, loss: 25.996815\n",
+      "step: 150000, loss: 12.970681\n",
+      "step: 160000, loss: 24.079559\n",
+      "step: 170000, loss: 13.943914\n",
+      "step: 180000, loss: 18.572304\n",
+      "step: 190000, loss: 9.348878\n",
+      "step: 200000, loss: 18.089130\n",
       "Evaluation...\n",
-      "\"five\" nearest neighbors: three, four, seven, eight, six, two, nine, zero,\n",
-      "\"of\" nearest neighbors: the, a, first, was, also, its, and, however,\n",
-      "\"going\" nearest neighbors: la, view, apollo, supreme, rule, called, base, who,\n",
-      "\"hardware\" nearest neighbors: was, use, some, two, external, many, may, zero,\n",
-      "\"american\" nearest neighbors: UNK, and, in, s, on, a, when, about,\n",
-      "\"britain\" nearest neighbors: known, state, an, time, most, as, it, called,\n",
-      "step: 210000, loss: 9.823972\n"
+      "\"five\" nearest neighbors: three, four, two, six, seven, eight, zero, nine,\n",
+      "\"of\" nearest neighbors: the, in, a, from, its, with, which, and,\n",
+      "\"going\" nearest neighbors: majority, as, other, or, important, name, but, s,\n",
+      "\"hardware\" nearest neighbors: them, concept, many, used, been, more, he, most,\n",
+      "\"american\" nearest neighbors: UNK, in, and, after, the, when, s, about,\n",
+      "\"britain\" nearest neighbors: such, like, and, new, at, where, into, number,\n",
+      "step: 210000, loss: 10.674805\n",
+      "step: 220000, loss: 13.143139\n",
+      "step: 230000, loss: 15.512644\n",
+      "step: 240000, loss: 7.366494\n",
+      "step: 250000, loss: 8.714966\n",
+      "step: 260000, loss: 11.830827\n",
+      "step: 270000, loss: 9.563780\n",
+      "step: 280000, loss: 6.497772\n",
+      "step: 290000, loss: 8.469338\n",
+      "step: 300000, loss: 11.743798\n",
+      "step: 310000, loss: 13.295176\n",
+      "step: 320000, loss: 13.485636\n",
+      "step: 330000, loss: 8.618397\n",
+      "step: 340000, loss: 9.400799\n",
+      "step: 350000, loss: 11.475803\n",
+      "step: 360000, loss: 7.928530\n",
+      "step: 370000, loss: 8.956717\n",
+      "step: 380000, loss: 7.695811\n",
+      "step: 390000, loss: 7.630710\n",
+      "step: 400000, loss: 10.522996\n",
+      "Evaluation...\n",
+      "\"five\" nearest neighbors: four, three, six, seven, eight, two, one, zero,\n",
+      "\"of\" nearest neighbors: its, a, with, these, the, however, first, from,\n",
+      "\"going\" nearest neighbors: other, all, important, may, use, such, example, them,\n",
+      "\"hardware\" nearest neighbors: modern, than, other, much, among, more, but, even,\n",
+      "\"american\" nearest neighbors: s, in, english, british, from, including, during, on,\n",
+      "\"britain\" nearest neighbors: first, or, however, at, john, number, including, part,\n",
+      "step: 410000, loss: 6.308712\n",
+      "step: 420000, loss: 18.467430\n",
+      "step: 430000, loss: 7.888977\n",
+      "step: 440000, loss: 7.459783\n",
+      "step: 450000, loss: 6.293128\n",
+      "step: 460000, loss: 8.681707\n",
+      "step: 470000, loss: 6.368159\n",
+      "step: 480000, loss: 18.529409\n",
+      "step: 490000, loss: 6.904245\n",
+      "step: 500000, loss: 10.825451\n",
+      "step: 510000, loss: 8.331331\n",
+      "step: 520000, loss: 8.618421\n",
+      "step: 530000, loss: 7.685976\n",
+      "step: 540000, loss: 6.761878\n",
+      "step: 550000, loss: 11.544782\n",
+      "step: 560000, loss: 7.295343\n",
+      "step: 570000, loss: 6.568666\n",
+      "step: 580000, loss: 7.301814\n",
+      "step: 590000, loss: 6.963965\n",
+      "step: 600000, loss: 5.767748\n",
+      "Evaluation...\n",
+      "\"five\" nearest neighbors: four, three, six, two, eight, seven, one, zero,\n",
+      "\"of\" nearest neighbors: and, the, a, for, or, in, with, all,\n",
+      "\"going\" nearest neighbors: important, term, called, example, has, will, other, use,\n",
+      "\"hardware\" nearest neighbors: among, modern, than, who, popular, these, their, much,\n",
+      "\"american\" nearest neighbors: french, english, s, german, including, british, during, since,\n",
+      "\"britain\" nearest neighbors: number, after, first, modern, long, including, through, new,\n",
+      "step: 610000, loss: 3.721032\n",
+      "step: 620000, loss: 5.752687\n",
+      "step: 630000, loss: 6.723392\n",
+      "step: 640000, loss: 8.720921\n",
+      "step: 650000, loss: 6.724430\n",
+      "step: 660000, loss: 7.739100\n",
+      "step: 670000, loss: 6.452367\n",
+      "step: 680000, loss: 4.807709\n",
+      "step: 690000, loss: 6.984892\n",
+      "step: 700000, loss: 7.315066\n",
+      "step: 710000, loss: 10.765377\n",
+      "step: 720000, loss: 6.527763\n",
+      "step: 730000, loss: 7.745276\n",
+      "step: 740000, loss: 6.693064\n",
+      "step: 750000, loss: 12.472353\n",
+      "step: 760000, loss: 7.372541\n",
+      "step: 770000, loss: 9.155153\n",
+      "step: 780000, loss: 6.930103\n",
+      "step: 790000, loss: 9.565100\n",
+      "step: 800000, loss: 5.752143\n",
+      "Evaluation...\n",
+      "\"five\" nearest neighbors: four, three, six, seven, eight, two, one, zero,\n",
+      "\"of\" nearest neighbors: and, including, the, a, include, in, by, with,\n",
+      "\"going\" nearest neighbors: such, must, made, this, make, they, important, any,\n",
+      "\"hardware\" nearest neighbors: among, less, while, modern, more, popular, other, even,\n",
+      "\"american\" nearest neighbors: born, french, b, english, german, d, british, john,\n",
+      "\"britain\" nearest neighbors: including, following, number, off, by, before, into, new,\n"
      ]
     }
    ],
