--- a/word2vec.ipynb
+++ b/word2vec.ipynb
@@ -360,7 +360,88 @@
       "\"going\" nearest neighbors: such, must, made, this, make, they, important, any,\n",
       "\"hardware\" nearest neighbors: among, less, while, modern, more, popular, other, even,\n",
       "\"american\" nearest neighbors: born, french, b, english, german, d, british, john,\n",
-      "\"britain\" nearest neighbors: including, following, number, off, by, before, into, new,\n"
+      "\"britain\" nearest neighbors: including, following, number, off, by, before, into, new,\n",
+      "step: 810000, loss: 7.482447\n",
+      "step: 820000, loss: 5.989981\n",
+      "step: 830000, loss: 7.241916\n",
+      "step: 840000, loss: 5.657691\n",
+      "step: 850000, loss: 7.889552\n",
+      "step: 860000, loss: 6.005042\n",
+      "step: 870000, loss: 5.792614\n",
+      "step: 880000, loss: 9.968457\n",
+      "step: 890000, loss: 6.634973\n",
+      "step: 900000, loss: 6.233032\n",
+      "step: 910000, loss: 7.540464\n",
+      "step: 920000, loss: 6.826071\n",
+      "step: 930000, loss: 7.339088\n",
+      "step: 940000, loss: 6.834771\n",
+      "step: 950000, loss: 9.909015\n",
+      "step: 960000, loss: 6.196778\n",
+      "step: 970000, loss: 6.089878\n",
+      "step: 980000, loss: 5.044542\n",
+      "step: 990000, loss: 6.707607\n",
+      "step: 1000000, loss: 4.946754\n",
+      "Evaluation...\n",
+      "\"five\" nearest neighbors: three, four, six, seven, eight, two, nine, zero,\n",
+      "\"of\" nearest neighbors: the, and, first, from, including, a, second, in,\n",
+      "\"going\" nearest neighbors: must, made, any, make, even, may, more, similar,\n",
+      "\"hardware\" nearest neighbors: less, more, rather, modern, important, among, made, popular,\n",
+      "\"american\" nearest neighbors: b, born, d, UNK, nine, john, one, seven,\n",
+      "\"britain\" nearest neighbors: old, following, including, british, its, new, first, a,\n",
+      "step: 1010000, loss: 6.280418\n",
+      "step: 1020000, loss: 5.519311\n",
+      "step: 1030000, loss: 9.668519\n",
+      "step: 1040000, loss: 5.605007\n",
+      "step: 1050000, loss: 8.199787\n",
+      "step: 1060000, loss: 5.436756\n",
+      "step: 1070000, loss: 6.702527\n",
+      "step: 1080000, loss: 7.321043\n",
+      "step: 1090000, loss: 5.775429\n",
+      "step: 1100000, loss: 5.801703\n",
+      "step: 1110000, loss: 6.766209\n",
+      "step: 1120000, loss: 7.152344\n",
+      "step: 1130000, loss: 5.999866\n",
+      "step: 1140000, loss: 5.210426\n",
+      "step: 1150000, loss: 5.700253\n",
+      "step: 1160000, loss: 5.863857\n",
+      "step: 1170000, loss: 7.832665\n",
+      "step: 1180000, loss: 7.314445\n",
+      "step: 1190000, loss: 6.136091\n",
+      "step: 1200000, loss: 6.048571\n",
+      "Evaluation...\n",
+      "\"five\" nearest neighbors: four, six, three, seven, eight, two, nine, one,\n",
+      "\"of\" nearest neighbors: the, and, in, including, from, by, with, both,\n",
+      "\"going\" nearest neighbors: make, may, either, must, but, even, water, will,\n",
+      "\"hardware\" nearest neighbors: less, than, more, these, few, modern, other, rather,\n",
+      "\"american\" nearest neighbors: born, b, german, john, french, d, british, UNK,\n",
+      "\"britain\" nearest neighbors: following, by, old, modern, within, including, was, first,\n",
+      "step: 1210000, loss: 5.980393\n",
+      "step: 1220000, loss: 6.494499\n",
+      "step: 1230000, loss: 6.471974\n",
+      "step: 1240000, loss: 6.365396\n",
+      "step: 1250000, loss: 6.160880\n",
+      "step: 1260000, loss: 9.145726\n",
+      "step: 1270000, loss: 6.374410\n",
+      "step: 1280000, loss: 8.810885\n",
+      "step: 1290000, loss: 5.843212\n",
+      "step: 1300000, loss: 6.819271\n",
+      "step: 1310000, loss: 5.646761\n",
+      "step: 1320000, loss: 5.755733\n",
+      "step: 1330000, loss: 5.411512\n",
+      "step: 1340000, loss: 6.336850\n",
+      "step: 1350000, loss: 6.396793\n",
+      "step: 1360000, loss: 7.761738\n",
+      "step: 1370000, loss: 5.265936\n",
+      "step: 1380000, loss: 5.689759\n",
+      "step: 1390000, loss: 5.809983\n",
+      "step: 1400000, loss: 7.533849\n",
+      "Evaluation...\n",
+      "\"five\" nearest neighbors: four, three, six, two, eight, seven, one, zero,\n",
+      "\"of\" nearest neighbors: the, its, and, on, including, for, in, modern,\n",
+      "\"going\" nearest neighbors: make, however, but, there, without, any, made, must,\n",
+      "\"hardware\" nearest neighbors: to, less, each, usually, their, few, modern, among,\n",
+      "\"american\" nearest neighbors: english, german, french, born, film, s, references, british,\n",
+      "\"britain\" nearest neighbors: modern, first, after, ancient, following, within, from, second,\n"
      ]
     }
    ],
